<resources>
    <string name="app_name">Star Quiz</string>
    <string name="returnButtonText">Return</string>
    <string name="okButtonText">OK</string>
    <string name="descriptionInfo_rules">
        Overview: Test your Video Game knowledge across all historical accounts.
        Race against time, answer correctly, and rack up points.
        Learn about lifeline mechanics in the next page.
        Each category is scaled by difficulty, leaving the last category at the bottom to challenge yourself.
        Earn more points depending on the difficulty of the Questions.
    </string>
    <string name="info_rulesTitle">Info &amp; Rules</string>
    <string name="leaderboard_select">Leaderboard Select</string>
    <string name="mode_select">Mode Select</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_30">30</string>
    <string name="_40">40</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="specificLeaderTitle">Title Here</string>
    <string name="returnHome">Return Home</string>
    <string name="pick_of_questions_to_play">Pick # of questions to play</string>
...
