...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usernameEditText"
        app:layout_constraintWidth_percent="0.3" />

    <!-- Button to navigate to the Leaderboard Select screen -->
    <Button
        android:id="@+id/leaderboardsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Leaderboards"
        android:backgroundTint="@color/buttonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <!-- Button to navigate to the Info & Rules screen -->
...
