...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10Leaderboard" />

    <Button
        android:id="@+id/button30Leaderboard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/medium"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button50Leaderboard" />

    <Button
        android:id="@+id/nextLeaderboardSelectButton"
        android:layout_width="90dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
...
